# wyllo-fraud-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.tmp_dagster_home_u4xsht2v/history/: runs.db
.tmp_dagster_home_u4xsht2v/history/runs/: index.db
.tmp_dagster_home_u4xsht2v/schedules/: schedules.db
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_month_spine.sql  haversine_km.sql
dbt/models/bronze/: _olist_sources.yml  br_category_translation.sql  br_customers.sql  br_geolocation.sql  br_order_items.sql  br_order_payments.sql  br_order_reviews.sql  br_orders.sql  br_products.sql  br_sellers.sql
dbt/models/gold/: _gold.yml  fct_customer_return_risk_features.sql  int_orders_enriched.sql
dbt/models/silver/: _silver.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql
dbt/seeds/: _seeds.yml  category_risk_priors.csv  payment_method_risk.csv  risk_thresholds.csv
dbt/tests/generic/: test_expression_is_true.sql  test_unique_combination.sql
docs/: ARCHITECTURE.md  SCHEMA_FRAUD_MAPPING.md
ingestion/: load_raw_to_duckdb.py
ingestion/athena/: query_athena.py
ingestion/glue/: run_crawler.py
ingestion/s3/: download_olist.py  upload_to_s3.py
notebooks/: eda.ipynb
orchestration/: __init__.py  dbt_models.py  definitions.py  ingestion_assets.py  jobs.py  resources.py  schedules.py  sensors.py
streamlit/: app.py
streamlit/pages/: 1_📊_Medallion_Layers.py  2_⭐_Feature_Store.py  3_✅_Data_Quality.py  4_🔗_Lineage.py
streamlit/utils/: data.py  styles.py
