[project]
name = "wyllo-fraud-pipeline"
version = "0.1.0"
description = "Return-fraud feature store pipeline over the Olist Brazilian e-commerce dataset"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core data stack
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",

    # Transformation
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",

    # AWS
    "boto3>=1.34.0",
    "s3fs>=2024.6.0",

    # Utilities
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# Orchestration only when running Dagster
orchestration = [
    "dagster==1.10.4",
    "dagster-webserver==1.10.4",
    "dagster-dbt==0.26.4",
    "dagster-duckdb==0.26.4",
]

# Dashboard
dashboard = [
    "streamlit==1.41.1",
    "plotly==5.24.1",
]

# AI / DataOps catalog search — optional add-on
ai = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "faiss-cpu>=1.8.0",
    "tiktoken>=0.7.0",
]

# Dev tooling
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "moto[s3,glue,athena]>=5.0.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
]

# Install everything
all = [
    "wyllo-fraud-pipeline[orchestration,dashboard,ai,dev]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dbt/target", "dbt/dbt_packages", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch DuckDB or S3 mocks",
    "slow: tests over 5s",
]
